--- a/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-dbpedia-entity-flat.yaml
@@ -3,7 +3,7 @@ corpus: beir-v1.0.0-dbpedia-entity
 corpus_path: collections/beir-v1.0.0/corpus/dbpedia-entity/
 
 index_path: indexes/lucene-index.beir-v1.0.0-dbpedia-entity-flat/
-collection_class: BeirCollection
+collection_class: BeirFlatCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
