--- a/src/main/resources/regression/beir-v1.0.0-arguana-multifield.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-arguana-multifield.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: beir-v1.0.0-climate-fever
-corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
+corpus: beir-v1.0.0-arguana
+corpus_path: collections/beir-v1.0.0/corpus/arguana/
 
-index_path: indexes/lucene-index.beir-v1.0.0-climate-multi-field/
-collection_class: BeirMultiFieldCollection
+index_path: indexes/lucene-index.beir-v1.0.0-arguana-multi-field/
+collection_class: BeirMultifieldCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw -fields title
 index_stats:
-  documents: 5416593
-  documents (non-empty): 5416593
-  total terms: 325185077
+  documents: 8674
+  documents (non-empty): 8673
+  total terms: 944123
 
 metrics:
   - metric: nDCG@10
@@ -39,19 +39,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): climate-fever"
+  - name: "BEIR (v1.0.0): arguana"
     id: test
-    path: topics.beir-v1.0.0-climate-fever.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-climate-fever.test.txt
+    path: topics.beir-v1.0.0-arguana.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-arguana.test.txt
 
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -removeQuery -hits 1000
+    params: -bm25 -removeQuery -hits 1000 -fields contents=1.0 title=1.0
     results:
       nDCG@10:
-        - 0.1651
+        - 0.4142
       R@100:
-        - 0.4249
+        - 0.9431
       R@1000:
-        - 0.6324
+        - 0.9893
