--- a/src/main/resources/regression/beir-v1.0.0-climate-fever-multifield.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-climate-fever-multifield.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: beir-v1.0.0-arguana
-corpus_path: collections/beir-v1.0.0/corpus/arguana/
+corpus: beir-v1.0.0-climate-fever
+corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
 
-index_path: indexes/lucene-index.beir-v1.0.0-arguana-multi-field/
-collection_class: BeirMultiFieldCollection
+index_path: indexes/lucene-index.beir-v1.0.0-climate-multifield/
+collection_class: BeirMultifieldCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw -fields title
 index_stats:
-  documents: 8674
-  documents (non-empty): 8673
-  total terms: 969528
+  documents: 5396163
+  documents (non-empty): 5396117
+  total terms: 310661482
 
 metrics:
   - metric: nDCG@10
@@ -39,19 +39,19 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): arguana"
+  - name: "BEIR (v1.0.0): climate-fever"
     id: test
-    path: topics.beir-v1.0.0-arguana.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-arguana.test.txt
+    path: topics.beir-v1.0.0-climate-fever.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-climate-fever.test.txt
 
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -removeQuery -hits 1000
+    params: -bm25 -removeQuery -hits 1000 -fields contents=1.0 title=1.0
     results:
       nDCG@10:
-        - 0.3970
+        - 0.2129
       R@100:
-        - 0.9324
+        - 0.4357
       R@1000:
-        - 0.9872
+        - 0.6099
