--- a/src/main/resources/regression/dl19-doc-segmented-wp.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented-wp.yaml
@@ -13,16 +13,16 @@ index_stats:
   total terms: 6338905909
 
 metrics:
-  - metric: AP@1000
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2019 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@100
+  - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -46,21 +46,21 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.wp.tsv.gz
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL19 (Doc)](https://trec.nist.gov/data/deep2019.html)"
+    id: dl19
+    path: topics.dl19-doc.wp.tsv.gz
+    qrel: qrels.dl19-doc.txt
 
 models:
   - name: bm25-default
     display: BM25 (default)
     params: -bm25 -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      AP@1000:
-        - 0.2674
-      RR@100:
-        - 0.2668
+      AP@100:
+        - 0.2269
+      nDCG@10:
+        - 0.5206
       R@100:
-        - 0.7705
+        - 0.3708
       R@1000:
-        - 0.9118
+        - 0.6476
