--- a/src/main/resources/regression/dl20-doc-wp.yaml
+++ b/src/main/resources/regression/dl20-doc-wp.yaml
@@ -1,28 +1,28 @@
 ---
-corpus: msmarco-doc-segmented-wp
-corpus_path: collections/msmarco/msmarco-doc-segmented-wp/
+corpus: msmarco-doc-wp
+corpus_path: collections/msmarco/msmarco-doc-wp/
 
-index_path: indexes/lucene-index.msmarco-doc-segmented-wp/
+index_path: indexes/lucene-index.msmarco-doc-wp/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 16
+index_threads: 7
 index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
 index_stats:
-  documents: 20545677
-  documents (non-empty): 20545677
-  total terms: 6338905909
+  documents: 3213835
+  documents (non-empty): 3213835
+  total terms: 5326252749
 
 metrics:
-  - metric: AP@1000
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2020 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@100
+  - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -46,21 +46,21 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.wp.tsv.gz
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.wp.tsv.gz
+    qrel: qrels.dl20-doc.txt
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -pretokenized
     results:
-      AP@1000:
-        - 0.2674
-      RR@100:
-        - 0.2668
+      AP@100:
+        - 0.3258
+      nDCG@10:
+        - 0.5046
       R@100:
-        - 0.7705
+        - 0.5483
       R@1000:
-        - 0.9118
+        - 0.7436
