--- a/src/main/resources/regression/msmarco-doc-wp.yaml
+++ b/src/main/resources/regression/msmarco-doc-wp.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-doc-segmented-wp
-corpus_path: collections/msmarco/msmarco-doc-segmented-wp/
+corpus: msmarco-doc-wp
+corpus_path: collections/msmarco/msmarco-doc-wp/
 
-index_path: indexes/lucene-index.msmarco-doc-segmented-wp/
+index_path: indexes/lucene-index.msmarco-doc-wp/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 16
+index_threads: 7
 index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
 index_stats:
-  documents: 20545677
-  documents (non-empty): 20545677
-  total terms: 6338905909
+  documents: 3213835
+  documents (non-empty): 3213835
+  total terms: 5326252749
 
 metrics:
   - metric: AP@1000
@@ -54,13 +54,13 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -pretokenized
     results:
       AP@1000:
-        - 0.2674
+        - 0.2234
       RR@100:
-        - 0.2668
+        - 0.2227
       R@100:
-        - 0.7705
+        - 0.7031
       R@1000:
-        - 0.9118
+        - 0.8743
