--- a/src/main/resources/docgen/templates/beir-v1.0.0-robust04-flat.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-robust04-flat.template
@@ -1,6 +1,6 @@
-# Anserini Regressions: BEIR (v1.0.0) &mdash; robust04
+# Anserini Regressions: BEIR (v1.0.0) &mdash; Robust04
 
-This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; robust04](http://beir.ai/).
+This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; Robust04](http://beir.ai/).
 These experiments index the corpus in a "flat" manner, by concatenating the "title" and "text" into the "contents" field.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
