--- a/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-gis-flat.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-gis-flat.template
@@ -1,43 +1,43 @@
-# ANserini REgressions: BEIR (V1.0.0) &Mdash; Cqadupstack-Gis
+# Anserini Regressions: BEIR (v1.0.0) &mdash; Cqadupstack-gis
 
-THis Page Documents BM25 Regression Experiments For [BEIR (V1.0.0) &Mdash; Cqadupstack-Gis](Http://Beir.Ai/).
-THese Experiments Index The Corpus In A "Flat" Manner, By Concatenating The "Title" And "Text" Into The "Contents" Field.
+This page documents BM25 regression experiments for [BEIR (v1.0.0) &mdash; Cqadupstack-gis](http://beir.ai/).
+These experiments index the corpus in a "flat" manner, by concatenating the "title" and "text" into the "contents" field.
 
-THe Exact Configurations For These Regressions Are Stored In [This YAML File](${Yaml}).
-NOte That This Page Is Automatically Generated From [This Template](${Template}) As Part Of ANserini'S Regression Pipeline, So Do Not Modify This Page Directly; Modify The Template Instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
-FRom One Of Our WAterloo Servers (E.G., `Orca`), The Following Command Will Perform The Complete Regression, End To End:
-
-```
-Python Src/Main/Python/Run_Regression.Py --Index --Verify --Search --Regression ${Test_Name}
-```
-
-## INdexing
-
-TYpical Indexing Command:
+From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
 
 ```
-${Index_Cmds}
+python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-FOr Additional Details, See Explanation Of [Common Indexing Options](Common-Indexing-Options.Md).
+## Indexing
 
-## REtrieval
-
-AFter Indexing Has Completed, You Should Be Able To Perform Retrieval As Follows:
+Typical indexing command:
 
 ```
-${Ranking_Cmds}
+${index_cmds}
 ```
 
-EValuation Can Be Performed Using `Trec_Eval`:
+For additional details, see explanation of [common indexing options](common-indexing-options.md).
+
+## Retrieval
+
+After indexing has completed, you should be able to perform retrieval as follows:
 
 ```
-${Eval_Cmds}
+${ranking_cmds}
 ```
 
-## EFfectiveness
+Evaluation can be performed using `trec_eval`:
 
-WIth The Above Commands, You Should Be Able To Reproduce The Following Results:
+```
+${eval_cmds}
+```
 
-${Effectiveness}
+## Effectiveness
+
+With the above commands, you should be able to reproduce the following results:
+
+${effectiveness}
