--- a/src/main/resources/docgen/templates/dl21-doc-segmented-unicoil-0shot.template
+++ b/src/main/resources/docgen/templates/dl21-doc-segmented-unicoil-0shot.template
@@ -1,6 +1,6 @@
 # Anserini Regressions: TREC 2021 Deep Learning Track (Document)
 
-**Model**: uniCOIL (with doc2query-T5 expansions) zero-shot on segmented documents
+**Model**: uniCOIL (with doc2query-T5 expansions) zero-shot on segmented documents (segment-only encoding) - _Deprecated_, see below
 
 This page describes experiments, integrated into Anserini's regression testing framework, on the [TREC 2021 Deep Learning Track document ranking task](https://trec.nist.gov/data/deep2021.html) using the MS MARCO V2 _segmented_ document collection.
 Here, we cover experiments with the uniCOIL model trained on the MS MARCO V1 passage ranking test collection, applied in a zero-shot manner, with doc2query-T5 expansions.
