--- a/src/main/resources/regression/dl20-doc-segmented-unicoil-v2.yaml
+++ b/src/main/resources/regression/dl20-doc-segmented-unicoil-v2.yaml
@@ -13,16 +13,16 @@ index_stats:
   total terms: 214194575621
 
 metrics:
-  - metric: AP@1000
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2020 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@100
+  - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -46,21 +46,21 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.unicoil.tsv.gz
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.unicoil.0shot.tsv.gz
+    qrel: qrels.dl20-doc.txt
 
 models:
   - name: unicoil
-    display: uniCOIL (with doc2query-T5 expansions)
+    display: uniCOIL w/ doc2query-T5 expansion
     params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      AP@1000:
-        - 0.3539
-      RR@100:
-        - 0.3536
+      AP@100:
+        - 0.3871
+      nDCG@10:
+        - 0.6047
       R@100:
-        - 0.8848
+        - 0.6213
       R@1000:
-        - 0.9546
+        - 0.7901
